feat: week2 과제 업로드

--- a/apps/week2/package.json
+++ b/apps/week2/package.json
@@ -9,5 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {}
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "multer": "^2.0.2"
+  }
 }
