feat: week4 상태 필터 추가, 반응형 대응

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,7 +20,9 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
-  "include": ["vite.config.ts"]
+  "include": ["apps/**/vite.config.ts"]
 }
