--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
+    "typescript-plugin-css-modules": "^5.2.0",
     "vite": "^7.1.7"
   },
   "keywords": [],
