feat: week7 서버, 클라이언트 웹소켓 연결

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "week3": "pnpm -F @fe-challenge/week3 dev",
     "week4": "pnpm -F @fe-challenge/week4 dev",
     "week5": "pnpm -F @fe-challenge/week5 dev",
-    "week6": "pnpm -F @fe-challenge/week6 dev"
+    "week6": "pnpm -F @fe-challenge/week6 dev",
+    "week7": "pnpm -F @fe-challenge/week7 dev"
   },
   "dependencies": {
     "react": "^19.1.1",
