--- a/apps/week7/package.json
+++ b/apps/week7/package.json
@@ -8,5 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.8.1"
   }
 }
