feat: week8 Next.js 랜딩페이지

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "week4": "pnpm -F @fe-challenge/week4 dev",
     "week5": "pnpm -F @fe-challenge/week5 dev",
     "week6": "pnpm -F @fe-challenge/week6 dev",
-    "week7": "pnpm -F @fe-challenge/week7 dev"
+    "week7": "pnpm -F @fe-challenge/week7 dev",
+    "week8": "pnpm -F @fe-challenge/week8 dev"
   },
   "dependencies": {
     "react": "^19.1.1",
