--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "week5": "pnpm -F @fe-challenge/week5 dev",
     "week6": "pnpm -F @fe-challenge/week6 dev",
     "week7": "pnpm -F @fe-challenge/week7 dev",
-    "week8": "pnpm -F @fe-challenge/week8 dev"
+    "week8": "pnpm -F @fe-challenge/week8 dev",
+    "week9": "pnpm -F @fe-challenge/week9 dev"
   },
   "dependencies": {
     "react": "^19.1.1",
