feat: week10 토스트(Toast) 알림 시스템

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "week6": "pnpm -F @fe-challenge/week6 dev",
     "week7": "pnpm -F @fe-challenge/week7 dev",
     "week8": "pnpm -F @fe-challenge/week8 dev",
-    "week9": "pnpm -F @fe-challenge/week9 dev"
+    "week9": "pnpm -F @fe-challenge/week9 dev",
+    "week10": "pnpm -F @fe-challenge/week10 dev"
   },
   "dependencies": {
     "react": "^19.1.1",
