feat: week9 모달을 프로바이더로 개선

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "week8": "pnpm -F @fe-challenge/week8 dev",
     "week9": "pnpm -F @fe-challenge/week9 dev",
     "week10": "pnpm -F @fe-challenge/week10 dev",
-    "week11": "pnpm -F @fe-challenge/week11 dev"
+    "week11": "pnpm -F @fe-challenge/week11 dev",
+    "week12": "pnpm -F @fe-challenge/week12 dev"
   },
   "dependencies": {
     "react": "^19.1.1",
